k8s/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mongo
  namespace: ai-task-platform

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mongo

  template:
    metadata:
      labels:
        app: mongo

    spec:
      containers:
        - name: mongo

          image: mongo:latest

          ports:
            - containerPort: 27017

          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"

            limits:
              memory: "512Mi"
              cpu: "500m"
