k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: redis
  namespace: ai-task-platform

spec:
  replicas: 1

  selector:
    matchLabels:
      app: redis

  template:
    metadata:
      labels:
        app: redis

    spec:
      containers:
        - name: redis

          image: redis:latest

          ports:
            - containerPort: 6379

          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"

            limits:
              memory: "256Mi"
              cpu: "500m"
