k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: worker
  namespace: ai-task-platform

spec:
  replicas: 2

  selector:
    matchLabels:
      app: worker

  template:
    metadata:
      labels:
        app: worker

    spec:
      containers:
        - name: worker

          image: priyadarshni614/worker:latest

          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"

            limits:
              memory: "256Mi"
              cpu: "500m"
